--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "ejs": "^2.5.7",
-    "mongodb": "^2.2.31"
+    "mongodb": "^2.2.31",
+    "socket.io": "^2.0.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
